--- a/styles.css
+++ b/styles.css
@@ -49,9 +49,10 @@ li{
 }
 
 .bottoneone{
-    background-color: blue;
+    background-color:#3882F6;
     color:white;
     margin-top:20px;
+    border-radius: 5px;
 }
 
 .placeholder{
@@ -83,7 +84,9 @@ li{
 .bluebox{
     height:200px;
     width: 200px;
-    border:4px solid rgb(0, 136, 255)
+    border:4px solid rgb(0, 136, 255);
+    border-radius:24px;
+    
 
 }
 
@@ -103,4 +106,25 @@ margin-left:30px;
 
 }
 
+.quote-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #e5e7eb;
+    padding:40px;
+}
+
+.quote{
+    width:750px;
+    font-size: 36px;
+    font-weight: 250;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+.thor{
+    align-self:flex-end;
+    margin-right:300px;
+    font-weight: bold;
+}
 
